--- a/lib/rack/objspace_stats/interactive/index.html.erb
+++ b/lib/rack/objspace_stats/interactive/index.html.erb
@@ -34,6 +34,7 @@
           filter out <input type="checkbox" id="filter-ruby" name="filter-ruby"></input> ruby
           <input type="checkbox" id="filter-gems" name="filter-gems"></input> gems
           <input type="checkbox" id="filter-pwd" name="filter-pwd"></input> project (PWD)
+          <input type="checkbox" id="filter-eval" name="filter-eval" checked="checked"></input> (eval)
         </section>
       </section>
 
