--- a/lib/rack/objspace_stats/interactive/style.css
+++ b/lib/rack/objspace_stats/interactive/style.css
@@ -22,7 +22,7 @@ body {
   color: #333333;
   border-radius: 4px;
   display: inline-block;
-  margin: 0 4px;
+  margin: 2px 4px;
   padding: 2px 4px;
 }
 
