TODO and can now group by class path and method id

--- a/lib/rack/objspace_stats/interactive/index.html.erb
+++ b/lib/rack/objspace_stats/interactive/index.html.erb
@@ -25,9 +25,10 @@
         <section id="gb-controls">
           group by <input type="checkbox" id="gb-file" name="file" checked="checked"></input> file
           <input type="checkbox" id="gb-line" name="line" checked="checked"></input> line
+          <input type="checkbox" id="gb-class-path" name="class_path"></input> class path
+          <input type="checkbox" id="gb-method-id" name="method_id"></input> method id
           <input type="checkbox" id="gb-class" name="class"></input> class
           <input type="checkbox" id="gb-class-plus" name="class_plus" checked="checked"></input> class+
-          <input type="checkbox" id="gb-method-id" name="method_id"></input> method id
         </section>
 
         <section id="filter-controls">
