--- a/lib/rack/objectspace_stats/interactive/index.html.erb
+++ b/lib/rack/objectspace_stats/interactive/index.html.erb
@@ -43,7 +43,7 @@ $(function() {
 
       <section id="controls">
         <section id="gb-controls">
-          group by <input type="checkbox" id="gb-file" name="file" checked="checked"></input>file
+          group by: <input type="checkbox" id="gb-file" name="file" checked="checked"></input>file
           <input type="checkbox" id="gb-line" name="line" checked="checked"></input>line
           <input type="checkbox" id="gb-class-path" name="class_path"></input>class path
           <input type="checkbox" id="gb-method-id" name="method_id"></input>method id
@@ -52,14 +52,22 @@ $(function() {
         </section>
 
         <section id="filter-controls">
-          filter out <input type="checkbox" id="filter-ruby" name="filter-ruby"></input>ruby
-          <input type="checkbox" id="filter-gems" name="filter-gems"></input>gems
-          <input type="checkbox" id="filter-pwd" name="filter-pwd"></input>project (PWD)
-          <input type="checkbox" id="filter-eval" name="filter-eval" checked="checked"></input>(eval)
+          <div>
+            filter out: <input type="checkbox" id="filter-ruby" name="filter-ruby"></input>ruby
+            <input type="checkbox" id="filter-gems" name="filter-gems"></input>gems
+            <input type="checkbox" id="filter-pwd" name="filter-pwd"></input>project (PWD)
+            <input type="checkbox" id="filter-eval" name="filter-eval" checked="checked"></input>(eval)
+          </div>
+          <div>
+            specific gems:
+            <% allocating_gems.each do |allocating_gem| %>
+              <%= allocating_gem %>
+            <% end %>
+          </div>
         </section>
 
         <section id="filter-controls">
-          only groups with at least
+          only groups with at least:
           <input type="text" id="filter-count" name="filter-count" value="1" />
           allocations
         </section>
