--- a/lib/rack/objectspace_stats/interactive/allocations.js.erb
+++ b/lib/rack/objectspace_stats/interactive/allocations.js.erb
@@ -1,3 +1,7 @@
+/* Copyright 2013 Google Inc. All Rights Reserved.
+ * Licensed under the Apache License, Version 2.0, found in the LICENSE file.
+ */
+
 var allocations = <%= Yajl::Encoder.encode(allocations) %>
 var pwd         = "<%= Dir.pwd %>"
 
