--- a/lib/rack/allocation_stats/interactive/index.html.erb
+++ b/lib/rack/allocation_stats/interactive/index.html.erb
@@ -39,7 +39,7 @@ $(function() {
   </head>
   <body>
     <main id="everything">
-      <h1>Rack::ObjectspaceStats</h1>
+      <h1>Rack::AllocationStats</h1>
 
       <section id="controls">
         <section id="gb-controls">
