--- a/lib/rack/allocation_stats/interactive/allocations.js.erb
+++ b/lib/rack/allocation_stats/interactive/allocations.js.erb
@@ -2,7 +2,7 @@
  * Licensed under the Apache License, Version 2.0, found in the LICENSE file.
  */
 
-var allocations = <%= Yajl::Encoder.encode(allocations) %>
+var allocations = <%= Yajl::Encoder.encode(@allocations) %>
 var pwd         = "<%= Dir.pwd %>"
 
 $(function() {
