--- a/lib/rack/allocation_stats/interactive/allocations.js.erb
+++ b/lib/rack/allocation_stats/interactive/allocations.js.erb
@@ -174,6 +174,13 @@ function filterAllocationsByControls() {
   return filtered;
 }
 
+function getParameterByName(name) {
+    name = name.replace(/[\[]/, "\\\[").replace(/[\]]/, "\\\]");
+    var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
+        results = regex.exec(location.search);
+    return results == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
+}
+
 function groupByFields(list, fields) {
   return _.groupBy(list, function(allocation) {
     values = new Array();
