--- a/lib/rack/allocation_stats/interactive/style.css
+++ b/lib/rack/allocation_stats/interactive/style.css
@@ -14,15 +14,15 @@ body {
   border: solid 1px #bbbbbb;
   margin: 2px auto 8px;
   width: 800px;
-  padding: 4px 2px; }
+  padding: 6px 6px; }
   #controls section {
     background-color: #F8F8F8;
     border: solid 1px #cccccc;
     color: #333333;
     border-radius: 4px;
-    display: inline-block;
-    margin: 2px 4px;
-    padding: 2px 4px; }
+    margin: 2px;
+    padding: 2px 6px;
+    line-height: 1.7; }
   #controls section:hover {
     background-color: white;
     color: #000000;
