--- a/lib/rack/allocation_stats/interactive/index.html.erb
+++ b/lib/rack/allocation_stats/interactive/index.html.erb
@@ -75,6 +75,10 @@ $(function() {
           <input type="text" id="filter-count" name="filter-count" />
           allocations
         </section>
+
+        <section id="option-controls">
+          <input type="checkbox" id="option-abbreviate-classes" name="option-abbreviate-classes" checked="checked"></input>abbreviate classes
+        </section>
       </section>
 
       <table id="allocations" cellpadding="0" cellspacing="0">
