Completing the split

--- a/lib/rack/allocation_stats/interactive/index.html.erb
+++ b/lib/rack/allocation_stats/interactive/index.html.erb
@@ -17,6 +17,10 @@
 <%= allocations_js %>
     </script>
 
+    <script>
+<%= interactive_js %>
+    </script>
+
     <style>
 <%= jquery_ui_min_css %>
     </style>
