--- a/lib/rack/allocation_stats/interactive/style.css
+++ b/lib/rack/allocation_stats/interactive/style.css
@@ -33,7 +33,8 @@ body {
   white-space: nowrap; }
 
 #allocations th, #allocations td {
-  padding: 1px 4px; }
+  padding: 1px 4px 1px 20px;
+  text-indent: -16px; }
 #allocations thead tr {
   background-color: white;
   color: #000000; }
