--- a/lib/rack/allocation_stats/interactive/style.scss
+++ b/lib/rack/allocation_stats/interactive/style.scss
@@ -46,7 +46,8 @@ body {
 
 #allocations {
   th, td {
-    padding: 1px 4px;
+    padding: 1px 4px 1px 20px;
+    text-indent: -16px;
   }
 
   thead tr {
