--- a/lib/rack/allocation_stats/interactive/style.css
+++ b/lib/rack/allocation_stats/interactive/style.css
@@ -32,6 +32,15 @@ body {
   text-align: right;
   white-space: nowrap; }
 
+.warning {
+  background-color: #FFEEEE;
+  border: solid 1px #FFCCCC;
+  color: #CC0000;
+  font-size: 1.1em;
+  margin: 10px auto;
+  padding: 4px;
+  width: 84%; }
+
 #allocations th, #allocations td {
   padding: 1px 4px 1px 20px;
   text-indent: -16px; }
