--- a/lib/rack/allocation_stats/interactive/style.scss
+++ b/lib/rack/allocation_stats/interactive/style.scss
@@ -44,6 +44,16 @@ body {
   white-space: nowrap;
 }
 
+.warning {
+  background-color: #FFEEEE;
+  border: solid 1px #FFCCCC;
+  color: #CC0000;
+  font-size: 1.1em;
+  margin: 10px auto;
+  padding: 4px;
+  width: 84%;
+}
+
 #allocations {
   th, td {
     padding: 1px 4px 1px 20px;
