--- a/lib/rack/allocation_stats/interactive/style.css
+++ b/lib/rack/allocation_stats/interactive/style.css
@@ -3,7 +3,8 @@
  */
 body {
   font-family: monospace;
-  font-size: 12px; }
+  font-size: 12px;
+  margin: 5px; }
 
 #everything {
   display: table;
@@ -42,8 +43,8 @@ body {
   width: 84%; }
 
 #allocations th, #allocations td {
-  padding: 1px 4px 1px 20px;
-  text-indent: -16px; }
+  padding: 1px 3.5px 1px 20px;
+  text-indent: -16.5px; }
 #allocations thead tr {
   background-color: white;
   color: #000000; }
